[gd_scene load_steps=2 format=3 uid="uid://bllstkg5nfiiv"]

[ext_resource type="Script" uid="uid://tvckiucho0iy" path="res://src/server_dialog.gd" id="1_qo100"]

[node name="ServerDialog" type="ConfirmationDialog"]
title = "Connect to server"
initial_position = 2
size = Vector2i(400, 400)
script = ExtResource("1_qo100")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="ServerLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Server"

[node name="ServerLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Port"

[node name="PortSpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
min_value = 1.0
max_value = 65535.0
value = 6667.0
rounded = true

[node name="SSLLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Use SSL"

[node name="SSLCheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Channels" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ChannelList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Channels"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Channels/ChannelList"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Channels"]
layout_mode = 2

[node name="AddChannelButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Channels/HBoxContainer"]
layout_mode = 2
text = "Add channel"

[node name="User" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
columns = 2
metadata/_tab_index = 1

[node name="NickLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/User"]
layout_mode = 2
text = "Nick"

[node name="NickLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/TabContainer/User"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UsernameLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/User"]
layout_mode = 2
text = "Username"

[node name="UsernameLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/TabContainer/User"]
layout_mode = 2

[node name="RealnameLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/User"]
layout_mode = 2
text = "Real name"

[node name="RealnameLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/TabContainer/User"]
layout_mode = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/TabContainer/Channels/HBoxContainer/AddChannelButton" to="." method="_on_add_channel_button_button_up"]
